Stabilization pass: SonarQube-driven fixes, dependency updates, remove dead OrderCancelled event/listener